# pokketstation

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: release-windows.yml  release.yml
core/: CMakeLists.txt
core/include/psemu/: psemu.h
core/src/: arm_exec.c  clk.c  clk.h  cpu.c  cpu.h  dac.c  dac.h  flash.c  flash.h  intc.c  intc.h  io.c  io.h  iop.c  iop.h  ir.c  ir.h  lcd.c  lcd.h  memory.c  memory.h  psemu.c  psemu_internal.h  rtc.c  rtc.h  thumb_exec.c  timer.c  timer.h
docs/: desktop_readme.md  hardware-notes.md  libretro_readme.md  vita_readme.md
frontends/desktop/: CMakeLists.txt  main.c  resource.h  resource.rc
frontends/libretro/: CMakeLists.txt  libretro.c
frontends/vita/: CMakeLists.txt  README.md  main.c
tests/: CMakeLists.txt  cpu_test.c  smoke_test.c
tools/: CMakeLists.txt  date_screen_probe.c  frame_audio_probe.c  inspect.c
